--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; 2023 Hutch's Mobile Services. All rights reserved.</p>
+        <p>&copy; 2019 Hutch's Mobile Services LLC. All rights reserved.</p>
     </footer>
 </body>
 </html>
