--- a/index.html
+++ b/index.html
@@ -52,12 +52,16 @@
             <label for="question">Questions:</label>
             <textarea id="question" name="question" required></textarea>
 
-            <button type="submit">Submit Query</button>
+            <section class="Submit Question">
+                <button id="bubbleButton" class="bubble-button">Submit Question</button>
+            </section>
         </form>
     </section>
 
     <footer class="footer">
         <p>&copy; 2019 Hutch's Mobile Services LLC. All rights reserved.</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
