--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <section class="about-section">
         <div class="mechanic-section">
             <h2>Skilled Mechanic</h2>
-            <p>Hello, my name is [Your Name], and I have over [X years/months] of experience as a professional mechanic. Throughout my career, I've honed my 
+            <p>Hello, my name is Terrance Hutch, and I have over almost 11 years of experience as a professional mechanic. Throughout my career, I've honed my 
 skills in everything from routine vehicle maintenance to complex repairs and engine upgrades.</p>
             <p>With a strong background in mechanical engineering and a passion for precision, I bring a meticulous approach to every job. My ability to 
 troubleshoot issues quickly and efficiently has made me a valuable asset to many mechanics' shops.</p>
