--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ This versatility and adaptability have been keys to my success so far, and I am 
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2019 Hutch's Mobile Auto Repair LLC. All rights reserved.</p>
     </footer>
 
     <script src="scripts.js"></script>
