--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; 2019 Hutch's Mobile Services LLC. All rights reserved.</p>
+        <p>&copy; 2019 Hutch's Mobile Auto Repair LLC. All rights reserved.</p>
     </footer>
 
     <script src="scripts.js"></script>
