--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
     </footer>
 
     <script src="scripts.js"></script>
+    <script defer src="https://static.getbutton.io/widget/bundle.js?id=ld7fN" ></script>
 </body>
 </html>
