--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
 
     <footer class="bg-black py-8 border-t border-purple-500/20">
         <div class="container mx-auto px-6 text-center">
-            <p class="text-gray-400">&copy; 2019 Hutch's Mobile Services LLC. All rights reserved.</p>
+            <p class="text-gray-400">&copy; 2019 Hutch's Mobile Auto Repair LLC. All rights reserved.</p>
         </div>
     </footer>
 
