--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
     <footer class="bg-black py-8 border-t border-purple-500/20">
         <div class="container mx-auto px-6 text-center">
-            <p class="text-gray-400">&copy; 2019 Hutch's Mobile Services LLC. All rights reserved.</p>
+            <p class="text-gray-400">&copy; 2019 Hutch's Mobile Mobile Auto LLC. All rights reserved.</p>
         </div>
     </footer>
 
