--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <ul class="flex space-x-8 slide-in-right">
                     <li><a href="/about" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">About Us</a></li>
                     <li><a href="#services" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Services</a></li>
-                    <li><a href="#game" class="nav-link text-grey-300 hover:text-yellow-400 font-medium">Hutch's Car Game</a></li>
+                    <li><a href="#game" class="nav-link text-grey-300 hover:text-yellow-400 font-medium">Hutch's Asteroid Game</a></li>
                     <li><a href="#ask-a-mechanic" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Contact</a></li>
                 </ul>
             </div>
