--- a/game.html
+++ b/game.html
@@ -122,13 +122,13 @@
         <nav class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <h1 class="text-2xl font-bold bg-gradient-to-r from-yellow-400 to-purple-500 bg-clip-text text-transparent slide-in-left">
-                    <a href="/">Hutch's Mobile Services</a>
+                    <a href="https://www.hutchsmobile.com/">Hutch's Mobile Services</a>
                 </h1>
                 <ul class="flex space-x-8 slide-in-right">
-                    <li><a href="/" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Home</a></li>
-                    <li><a href="/about" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">About Us</a></li>
-                    <li><a href="/#services" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Services</a></li>
-                    <li><a href="/#ask-a-mechanic" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Contact</a></li>
+                    <li><a href="https://www.hutchsmobile.com/" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Home</a></li>
+                    <li><a href="https://www.hutchsmobile.com/about" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">About Us</a></li>
+                    <li><a href="https://www.hutchsmobile.com/#services" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Services</a></li>
+                    <li><a href="https://www.hutchsmobile.com/#ask-a-mechanic" class="nav-link text-gray-300 hover:text-yellow-400 font-medium">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -832,5 +832,5 @@
             new AsteroidsGame();
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d488e373876501',t:'MTc1NDg4MTc3Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d7d74881c452a6',t:'MTc1NDkxNjQ0MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
