--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     About Hutch's Mobile Services
                 </h2>
                 <p class="text-xl text-gray-300 max-w-3xl mx-auto">
-                    With years of experience in automotive repair, we bring professional service directly to you. 
+                    With almost 11 years of experience in automotive repair, we bring professional service directly to you. 
                     No need to visit a shop - we come to your location with all the tools and expertise needed.
                 </p>
             </div>
@@ -332,8 +332,8 @@
                     <div class="mt-8 pt-8 border-t border-gray-600">
                         <div class="text-center">
                             <p class="text-gray-300 mb-4">Or call us directly:</p>
-                            <a href="tel:+1234567890" class="text-2xl font-bold text-yellow-400 hover:text-purple-400 transition-colors">
-                                (123) 456-7890
+                            <a href="tel:+17657138088" class="text-2xl font-bold text-yellow-400 hover:text-purple-400 transition-colors">
+                                (765) 713 - 8088
                             </a>
                         </div>
                     </div>
